# west-la-ice-route-optimizer

./: GOOGLE_SHEETS_SETUP.md  setup_cron.sh  test_calculation_fix.py  test_weekly_system.py
backend/: .env  .env.example  .gitignore  clear_cache.py  create_depot_csvs.py  create_google_maps_pins.py  create_real_lake_charles_csv.py  customer_data_582.csv  customer_locations_with_coordinates.csv  customer_map.html  debug_sheets.py  deinjjee.xlsx  fly.toml  lake_charles_customers.csv  leesville_customers.csv  lufkin_customers.csv  outside_radius_customers.csv  populate_sheets.py  pyproject.toml  real_lake_charles_customers_90.csv  test_route_constraints.py  validate_assignments.py  validate_routes.py  validate_texas_assignments.py  weekly_reset.py
backend/app/: customer_data.py  depot_assignment.py  google_maps_service.py  google_sheets_service.py  main.py  models.py  route_optimizer.py
frontend/: .env  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: CustomerManagement.tsx  DriverDashboard.tsx  FourWeekSchedule.tsx  GoogleMap.tsx  GoogleSheetsSync.tsx  WeeklyVisitDashboard.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
