[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Devin AI <158243242+devin-ai-integration[bot]@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.116.1"}
psycopg = {extras = ["binary"], version = "^3.2.9"}
ortools = "^9.14.6206"
requests = "^2.32.4"
python-dotenv = "^1.1.1"
pandas = "^2.3.1"
openpyxl = "^3.1.5"
gspread = "^6.1.2"
google-auth = "^2.23.0"
google-api-python-client = "^2.179.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
